--- a/styles/style.css
+++ b/styles/style.css
@@ -88,3 +88,12 @@ h1{
 		background-position: 0% 50%;
 	}
 }
+.res{
+    display: flex;
+    justify-content: center;
+}
+#result{
+    text-decoration:underline;
+    color: #ffffff;
+    font-size: 40px;
+}
